--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,9 +1,27 @@
 ---
-wg_uplink_iface_ipv6: "{{ ansible_default_ipv6.interface }}"
-wg_uplink_iface_ipv4: "{{ ansible_default_ipv4.interface }}"
-wg_uplink_prefix_ipv6: "{{ ansible_default_ipv6.address ~ '/' ~ ansible_default_ipv6.prefix | ansible.utils.ipaddr('network/prefix') }}"
-wg_uplink_prefix_ipv4: "{{ ansible_default_ipv4.network ~ '/' ~ ansible_default_ipv4.prefix }}"
-wg_uplink_addresses: "{{ [ ansible_default_ipv6.address, ansible_default_ipv4.address] }}"
+ansible_default_ipv6: {}
+ansible_default_ipv4: {}
+
+# By default we enable an IP protocol if there is a default configuration
+# for it on the host. You can override this to explicitly disable a protocol.
+# Because there are two protocols, and you have to have at least one,
+# there are three valid combinations: IPv4+IPv6, IPv4 only, or IPv6 only.
+wg_ipv6_enable: "{{ (ansible_default_ipv6 | length > 0) }}"
+wg_ipv4_enable: "{{ (ansible_default_ipv4 | length > 0) }}"
+
+# Establish uplink interface names (eth0, ens3, etc)
+wg_uplink_iface_ipv6: "{{ wg_ipv6_enable | bool | ternary(ansible_default_ipv6.interface, false) }}"
+wg_uplink_iface_ipv4: "{{ wg_ipv4_enable | bool | ternary(ansible_default_ipv4.interface, false) }}"
+
+wg_uplink_prefixes: "{{ [
+    ansible_default_ipv6.address|default(false) ~ '/' ~ ansible_default_ipv6.prefix|default(false),
+    ansible_default_ipv4.address|default(false) ~ '/' ~ ansible_default_ipv4.prefix|default(false)
+  ] | ansible.utils.ipaddr('network/prefix') }}"
+
+wg_uplink_addresses: "{{ [
+  wg_ipv6_enable|ternary(ansible_default_ipv6.address|default(false),[]),
+  wg_ipv4_enable|ternary(ansible_default_ipv4.address|default(false),[])
+  ] | ansible.utils.ipaddr }}"
 
 wg_tunnel_iface: wg0
 wg_port: 51820
@@ -13,8 +31,13 @@ wg_port: 51820
 wg_tunnel_prefix_ipv6: fd99:9999::/64
 wg_tunnel_prefix_ipv4: 10.99.99.0/24
 
-# FIXME do we need an IPv4 resolver as well? Does wireguard even support multiple resolvers?
-wg_resolver: "{{ wg_tunnel_prefix_ipv6 | ansible.utils.ipaddr(1) | ansible.utils.ipaddr('address') }}"  # the server's tunnel IP
+wg_tunnel_addresses: "{{
+  wg_ipv6_enable | bool | ternary([wg_tunnel_prefix_ipv6], []) | union(
+  wg_ipv4_enable | bool | ternary([wg_tunnel_prefix_ipv4], []))  }}"
+
+# Default: the tunnel server's IP address
+wg_resolver: "{{ wg_tunnel_addresses | ansible.utils.ipaddr('1') | ansible.utils.ipaddr('address') | first }}"  # the server's tunnel IP
+# wg_resolver: "{{ wg_tunnel_prefix_ipv4 | ansible.utils.ipaddr('1') | ansible.utils.ipaddr('address') }}"  # the server's tunnel IP
 
 wg_hostname: vpn.foo.bar  # What clients will be connecting to
 wg_name: "{{ wg_hostname }}"  # How the server is named in client apps
@@ -34,15 +57,11 @@ wg_dns_search_domains: []
 
 wg_client_tunnel_flavors:
   - tunnel: full
-    allowedips:
-      - '0.0.0.0/0'
-      - '::/0'
+    allowedips: "{{ wg_ipv6_enable|bool|ternary(['::/0'], []) | union(
+                    wg_ipv4_enable|bool|ternary(['0.0.0.0/0'], [])) }}"
   - tunnel: split
-    allowedips:
-      - "{{ wg_uplink_prefix_ipv4 }}"
-      - "{{ wg_uplink_prefix_ipv6 }}"
-      - "{{ wg_tunnel_prefix_ipv4 }}"
-      - "{{ wg_tunnel_prefix_ipv6 }}"
+    allowedips: "{{ wg_ipv6_enable|bool|ternary([wg_tunnel_prefix_ipv6]|union(wg_uplink_prefixes|ansible.utils.ipv6), []) | union(
+                    wg_ipv4_enable|bool|ternary([wg_tunnel_prefix_ipv4]|union(wg_uplink_prefixes|ansible.utils.ipv4), [])) }}"
 
 # Set to 0 or false to disable this in the [Peer] section
 peer_persistentkeepalive: 10
