--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -14,14 +14,13 @@ wg_uplink_iface_ipv6: "{{ ansible_default_ipv6.interface if wg_ipv6_enable | boo
 wg_uplink_iface_ipv4: "{{ ansible_default_ipv4.interface if wg_ipv4_enable | bool else 'undef' }}"
 
 wg_uplink_prefixes: "{{
-  ([ansible_default_ipv6.address ~ '/' ~ ansible_default_ipv6.prefix] if wg_ipv6_enable | bool else [])  | union(
+  ([ansible_default_ipv6.address ~ '/' ~ ansible_default_ipv6.prefix] if wg_ipv6_enable | bool else []) | union(
   ([ansible_default_ipv4.address ~ '/' ~ ansible_default_ipv4.prefix] if wg_ipv4_enable | bool else [])) | sort(reverse=True) |
   ansible.utils.ipaddr('network/prefix') }}"
 
-wg_uplink_addresses: "{{
-  ([ansible_default_ipv6.address] if wg_ipv6_enable | bool else []) | union(
-  ([ansible_default_ipv4.address] if wg_ipv4_enable | bool else [])) |
-  ansible.utils.ipaddr | sort(reverse=True) }}"
+wg_uplink_addresses: "{{ ([ansible_default_ipv6.address] if wg_ipv6_enable | bool else [])
+  | union(([ansible_default_ipv4.address] if wg_ipv4_enable | bool else []))
+  | ansible.utils.ipaddr | sort(reverse=True) }}"
 
 wg_tunnel_iface: wg0
 wg_port: 51820
